--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.17
   http: ^0.13.5
+  flutter_map: ^2.2.0
+  latlong2: ^0.8.1
 
 dev_dependencies:
   flutter_test:
